# aiofiles

./: README.rst  pyproject.toml  setup.py
debian/: changelog  clean  control  copyright  gbp.conf  rules  watch
debian/patches/: 001-local-tests.patch  001-use-flit-for-build  002-loop-deprecation-warning.patch  002-slow-test-fix.patch  series
debian/tests/: control  runtest.py  unittests.py
debian/upstream/: metadata
