[project]
name = "aiofiles"
version = "0.7.0"
description = "File support for asyncio."
# authors = [{name = "Tin Tvrtkovic", email = "tinchester@gmail.com",}]
# license = "Apache 2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"
coverage = "^5.5"
tox = "^3.23.0"

[build-system]
requires = ["flit-core>=3.2,<4"]
build-backend = "flit_core.buildapi"
